Signed-off-by: hanbing <hanbing@qq.com>

--- a/tp/Admin/Tpl/Public/left.html
+++ b/tp/Admin/Tpl/Public/left.html
@@ -108,6 +108,9 @@ $(function(){
 				<li><cite></cite>
 					<a href="../home/job/index.php" target="rightFrame">任务兼职管理</a>
 				</li>
+				<li><cite></cite>
+					<a href="<{:U('SubJobHospital/index')}>" target="rightFrame">疫苗医院</a>
+				</li>
 			</ul>
 		</dd>
 		<dd>
