Signed-off-by: hanbing <hanbing@qq.com>

--- a/showpic.html
+++ b/showpic.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>首页</title>
+<title>照片展示</title>
 <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
@@ -21,13 +21,44 @@
 		<span>客服电话：0512-88819835/88819630</span>
 	</div>
 </div>
-
-<div class="flexslider">
-	<ul class="slides">
-		<li style="background:url(images/1.jpg) 50% 0 no-repeat;"></li>
-		<li style="background:url(images/2.jpg) 50% 0 no-repeat;"></li>
-		<li style="background:url(images/3.jpg) 50% 0 no-repeat;"></li>
-	</ul>
+<div class="show_container" >
+	<div class="container">
+	<div class="team">
+		<div class="title"><img src="images/team_title.png"></div>
+		<ul class="pic_group">
+			<li><img src="images/team/team_1.png"></li>
+			<li><img src="images/team/team_2.png"></li>
+			<li><img src="images/team/team_3.png"></li>
+			<li><img src="images/team/team_4.png"></li>
+			<li><img src="images/team/team_5.png"></li>
+			<div class="clear"></div>
+		</ul>
+		<div class="tips"><img src="images/pic_intro.png"></div>
+	</div>
+	<div class="member">
+		<div class="title"><img src="images/member_title.png"></div>
+		<ul class="pic_group">
+			<li><img src="images/member/member_1.png"></li>
+			<li><img src="images/member/member_2.png"></li>
+			<li><img src="images/member/member_3.png"></li>
+			<li><img src="images/member/member_4.png"></li>
+			<li><img src="images/member/member_5.png"></li>
+			<li><img src="images/member/member_6.png"></li>
+			<li><img src="images/member/member_7.png"></li>
+			<li><img src="images/member/member_8.png"></li>
+			<li><img src="images/member/member_9.png"></li>
+			<li><img src="images/member/member_10.png"></li>
+			<li><img src="images/member/member_11.png"></li>
+			<li><img src="images/member/member_12.png"></li>
+			<li><img src="images/member/member_13.png"></li>
+			<li><img src="images/member/member_14.png"></li>
+			<li><img src="images/member/member_15.png"></li>
+			<li><img src="images/member/member_16.png"></li>			
+			<div class="clear"></div>
+		</ul>		
+	</div>
+	<div class="clear"></div>
+	</div>
 </div>
 <div id="footer-wrap">
 	<div id="footer">
@@ -48,16 +79,6 @@
 	</div>
 </div>
 <div style="height:10px;"></div>
-
 <script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="js/jquery.flexslider-min.js"></script>
-<script type="text/javascript">
-$(document).ready(function(){
-	$('.flexslider').flexslider({
-		directionNav: true,
-		pauseOnAction: false
-	});
-});
-</script>
 </body>
 </html>
