--- a/tp/Admin/Tpl/Public/left.html
+++ b/tp/Admin/Tpl/Public/left.html
@@ -109,6 +109,9 @@ $(function(){
 					<a href="../home/job/index.php" target="rightFrame">任务兼职管理</a>
 				</li>
 				<li><cite></cite>
+					<a href="<{:U('SubJobYimiao/index')}>" target="rightFrame">疫苗任务</a>
+				</li>
+				<li><cite></cite>
 					<a href="<{:U('SubJobHospital/index')}>" target="rightFrame">疫苗医院</a>
 				</li>
 			</ul>
