--- a/tp/Admin/Tpl/SubJobHospital/add.html
+++ b/tp/Admin/Tpl/SubJobHospital/add.html
@@ -33,6 +33,10 @@
 					<input type="text" name="info[address]" value="<{$vo['address']}>" class="dfinput yaheifont">
 				</li>
 				<li>
+					<label>服务时间<b></b></label>
+					<input type="text" name="info[service_time]" value="<{$vo['service_time']}>" class="dfinput yaheifont">
+				</li>
+				<li>
 					<label>&nbsp;</label>
 					<input type="button" class="btn yaheifont" style="font-size:16px;" value="保存" onclick="save()"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					<input type="button" class="btn yaheifont returnUpBtn" value="返回" onclick="window.history.go(-1);"/>
