--- a/tp/Admin/Tpl/SubJobYimiao/index.html
+++ b/tp/Admin/Tpl/SubJobYimiao/index.html
@@ -29,47 +29,49 @@
 </head>
 <body>
 <div class="rightinfo">
-	<div class="tools">
+	<!-- <div class="tools">
 		<ul class="toolbar">
 			<li class="click" onclick="location.href='<{:U('add')}>'"><span><img src="__PUBLIC__/admin/images/t01.png" /></span>添加</li>
 		</ul>
-		<!-- <form action="<{:U('index')}>" name="searchForm" method="get">
+		<form action="" name="searchForm" method="get">
 		<input type="hidden" name='m' value='<{$moduleName}>' />
 		<input type="hidden" name='a' value="<{$actionName}>" />
 		<ul class="toolbar1">
 			<li>
 				<span>
-					<input type="text" name="username" placeholder="请输入手机号" value="<{:I('get.username')}>" />
+					<input type="text" name="name" placeholder="请输入名字" value="<{:I('get.name')}>" />
 				</span>
-				<span>
-					<input type="text" name="cardnum" placeholder="请输入身份证号" value="<{:I('get.cardnum')}>" />
-				</span>
+				<select name="scoredate">
+					<option value="">请选择日期</option>
+					<foreach name="dateArr" item="vo">
+						<option value="<{$vo}>" <if condition="$_GET['scoredate'] eq $vo">selected</if> ><{$vo}></option>
+					</foreach>
+				</select>
 				<b onclick="document.searchForm.submit()">搜索</b>
 			</li>
 		</ul>
-		</form> -->
-	</div>
+		</form>
+	</div> -->
 	<table class="imgtable">
 		<thead>
 			<tr>
-				<th>医院名</th>
-				<th>地址</th>
-				<th>服务时间</th>
+				<th>LOGO</th>
+				<th>标题</th>
+				<th>状态</th>
+				<th>领取提报</th>
 				<th>操作</th>
 			</tr>
 		</thead>
 		<tbody>
 			<foreach name="list['data']" item='v'>
 			<tr>
-				<td><{$v.name}></td>
-				<td><{$v.address}></td>
-				<td><{$v.service_time}></td>
-				<td>
-				<a href="<{:U('add',array('id'=>$v['id']))}>" target="rightFrame" onFocus="this.blur()" class="add">编辑</a>
+				<td class="imgtd"><notempty name="v.pic"><img src="<{$v.pic}>" style="width:50px;" /></notempty></td>
+				<td><{$v.title}></td>
+				<td><{:$v['is_shut']==1 ? '关闭' : '开放'}></td>
+				<td><a href="<{:U('see')}>" target="rightFrame" onFocus="this.blur()" class="add">查看</a>
+				<td><a href="<{:U('add',array('id'=>$v['id']))}>" target="rightFrame" onFocus="this.blur()" class="add">编辑</a>
 				&nbsp;|&nbsp;
-				<a href="javascript:void(0);" target="rightFrame" onFocus="this.blur()" onclick="delRow('<{:U('del',array('id'=>$v['id']))}>')">删除</a>
-				</td>
-				</if>
+				<a href="javascript:void(0);" target="rightFrame" onFocus="this.blur()" onclick="delRow('<{:U('del',array('id'=>$v['id']))}>')">删除</a></td>
 			</tr>
 			</foreach>
 		</tbody>
