Signed-off-by: hanbing <hanbing@qq.com>

--- a/tp/Admin/Tpl/Public/left.html
+++ b/tp/Admin/Tpl/Public/left.html
@@ -88,6 +88,9 @@ $(function(){
 				<li><cite></cite>
 					<a href="<{:U('Ban/index')}>" target="rightFrame">禁闭列表</a>
 				</li>
+				<li><cite></cite>
+					<a href="<{:U('Ban/lists')}>" target="rightFrame">每日未报到人员</a>
+				</li>
 			</ul>
 		</dd>
 		<dd>
