--- a/tp/Admin/Tpl/Ban/add.html
+++ b/tp/Admin/Tpl/Ban/add.html
@@ -26,12 +26,18 @@
 			<ul class="forminfo">
 				<li>
 					<label>手机号<b></b></label>
-					<input type="text" name="info[username]" value="<{$vo['username']}>" class="dfinput yaheifont">
+					<input type="text" name="info[username]" value="<{:$uRow['username'] ? $uRow['username'] : $vo['username']}>" class="dfinput yaheifont" onblur="matchUser(this,1)" />
 				</li>
 				<li>
 					<label>身份证号<b></b></label>
-					<input type="text" name="info[cardnum]" value="<{$vo['cardnum']}>" class="dfinput yaheifont">
+					<input type="text" name="info[cardnum]" value="<{:$uRow['cardnum'] ? $uRow['cardnum'] : $vo['cardnum']}>" class="dfinput yaheifont" onblur="matchUser(this,2)" />
 				</li>
+				<if condition="$vo['id'] eq ''">
+				<li>
+					<label>匹配用户<b></b></label>
+					<input type="text" value="<{:$uRow['nickname'] ? $uRow['nickname'] : ''}>" class="dfinput yaheifont" id="match_user" readonly style="background:none;background-color:#eee;" />
+				</li>
+				</if>
 				<li>
 					<label>禁闭类别<b></b></label>
 					<foreach name="ban_type" key="k" item="v">
@@ -88,6 +94,21 @@ function save(obj){
 		alert_tip('禁闭时长不能为空');return;
 	}
 	$('#memberform').submit();
+}
+//匹配用户
+function matchUser(obj,type){
+	var user_username;
+	var user_cardnum;
+	if(type==1){
+		user_username=$(obj).val();
+	}else{
+		user_cardnum=$(obj).val();
+	}
+	if(user_username=='' || user_cardnum=='') return;
+	$.post("<{:U('match')}>",{username:user_username,cardnum:user_cardnum},function(res){
+		res=$.trim(res);
+		if(res) $('#match_user').val(res);
+	})
 }
 </script>
 <!-- 日期插件开始 -->
