--- a/tp/Admin/Tpl/Ban/lists.html
+++ b/tp/Admin/Tpl/Ban/lists.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>后台管理</title>
 <link href="__PUBLIC__/admin/css/style.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="__PUBLIC__/js/jquery.min.js"></script>
+<script type="text/javascript" src="__PUBLIC__/admin/js/jquery.js"></script>
 <script type="text/javascript" src="__PUBLIC__/admin/js/alert-tip.js"></script>
 <script language="javascript">
 	$(function() {
@@ -35,14 +35,10 @@
 		<input type="hidden" name='a' value="<{$actionName}>" />
 		<ul class="toolbar1"><li>
 			<span style="margin-top:0;">
-				工作开始日期:
-				<input type="text" class="date_picker" name="start_date" placeholder="开始日期" value="<{:I('get.start_date')}>" /> —
+				日期:
+				<input type="text" class="date_picker" name="date" placeholder="日期" value="<{:I('get.date')}>" />
 			</span>
-			<span style="margin-top:0;">
-				结束日期:
-				<input type="text" class="date_picker" name="end_date" placeholder="结束日期" value="<{:I('get.end_date')}>" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			</span>
-			<b onclick="search()">搜索</b>
+			<b onclick="search()">搜索</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		</li>
 		</ul>
 		</form>
@@ -50,29 +46,23 @@
 	<table class="imgtable">
 		<thead>
 			<tr>
-				<th>标题</th>
-				<th>薪酬(元/人)</th>
-				<th>有效报名数(人)</th>
-				<th>出勤人数(人)</th>
-				<th>允许结算数(人)</th>
-				<th>需备用资金</th>
-				<th>工作时间</th>
-				<th>添加时间</th>
-				<th>报名列表</th>
+				<th>姓名</th>
+				<th>性别</th>
+				<th>电话</th>
+				<th>职位</th>
+				<th>工作日期</th>
+				<th>禁闭操作</th>
 			</tr>
 		</thead>
 		<tbody>
 			<foreach name="list['data']" item='v'>
 			<tr>
-				<td><{$v.title}>-<if condition="$v.pay_type eq 1">现金日结<else/><span style='color:red;display:inline;'>转账日结</span></if><if condition="$v.is_kh eq 1">（客户结算）</if></td>
-				<td><{$v.money}></td>
-				<td><{$v.valid_num}></td>
-				<td><{$v.qd_num}></td>
-				<td><{$v.js_num}></td>
-				<td>￥<{$v.spare_money}></td>
-				<td><{$v.work_time|substr=0,10}></td>
-				<td><{$v.addtime}></td>
-				<td><a href="<{:U('see',array('tid'=>$v['id']))}>">查看</a></td>
+				<td><{$v.nickname}></td>
+				<td><{$v.sex}></td>
+				<td><{$v.username}></td>
+				<td><{$v.title}></td>
+				<td><{$v.task_date}></td>
+				<td><a href="<{:U('add',array('uid'=>$v['uid']))}>" target="rightFrame" onFocus="this.blur()" class="add">禁闭</a>
 			</tr>
 			</foreach>
 		</tbody>
@@ -85,18 +75,10 @@
 </div>
 <script type="text/javascript">
 function search(){
-	if($("input[name='start_date']").val()=='' && $("input[name='end_date']").val()!=''){
-		alert_tip('请选择开始日期');return;
-	}
-	if($("input[name='start_date']").val()!='' && $("input[name='end_date']").val()==''){
-		alert_tip('请选择结束日期');return;
-	}
-	var start_date_val=parseInt($("input[name='start_date']").val().replace(/-/g,""));
-	var end_date_val=parseInt($("input[name='end_date']").val().replace(/-/g,""));
-	if(start_date_val > end_date_val){
-		alert_tip('开始日期不能大于结束日期');return;
-	}
 	document.searchForm.submit();
+}
+function delRow(str){
+	if(confirm('确定要删除吗？')) window.location.href=str;
 }
 </script>
 <!-- 日期插件开始 -->
