--- a/tp/Admin/Tpl/SubJobYimiao/see.html
+++ b/tp/Admin/Tpl/SubJobYimiao/see.html
@@ -52,6 +52,7 @@
 				<th>领取人性别</th>
 				<th>领取人电话</th>
 				<th>提报人数</th>
+				<th>操作</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -63,6 +64,9 @@
 				<td><{$v.sex}></td>
 				<td><{$v.username}></td>
 				<td><{:$v['num']==0 ? '未提报' : $v['num'].'人'}></td>
+				<td><a href="<{:U('add_sign',array('id'=>$v['id']))}>" target="rightFrame" onFocus="this.blur()" class="add">编辑</a>
+				&nbsp;|&nbsp;
+				<a href="javascript:void(0);" target="rightFrame" onFocus="this.blur()" onclick="delRow('<{:U('del_sign',array('id'=>$v['id']))}>')">删除</a></td>
 			</tr>
 			</foreach>
 		</tbody>
@@ -76,6 +80,9 @@
 <script type="text/javascript">
 function search(){
 	document.searchForm.submit();
+}
+function delRow(str){
+	if(confirm('确定要删除吗？')) window.location.href=str;
 }
 </script>
 <!-- 日期插件开始 -->
