--- a/tp/Admin/Tpl/Public/left.html
+++ b/tp/Admin/Tpl/Public/left.html
@@ -155,6 +155,16 @@ $(function(){
 				</li>
 			</ul>
 		</dd>
+		<dd>
+			<div class="title">
+				<span><img src="__PUBLIC__/admin/images/leftico02.png" /></span>群发消息
+			</div>
+			<ul class="menuson">
+				<li><cite></cite>
+					<a href="../home/msg/index.php" target="rightFrame">微信群发</a>
+				</li>
+			</ul>
+		</dd>
 	</if>
     </dl>
 </body>
