Signed-off-by: hanbing <hanbing@qq.com>

--- a/tp/Admin/Tpl/Public/left.html
+++ b/tp/Admin/Tpl/Public/left.html
@@ -75,6 +75,9 @@ $(function(){
 				<li><cite></cite>
 					<a href="<{:U('SubUser/index')}>" target="rightFrame">用户列表</a>
 				</li>
+				<li><cite></cite>
+					<a href="<{:U('SubUser/index',array('manage'=>1))}>" target="rightFrame">管理人员列表</a>
+				</li>
 			</ul>
 		</dd>
 	</if>
