Signed-off-by: hanbing <hanbing@qq.com>

--- a/tp/Admin/Tpl/SubUser/person_index.html
+++ b/tp/Admin/Tpl/SubUser/person_index.html
@@ -30,9 +30,9 @@
 <body>
 <div class="rightinfo">
 	<div class="tools">
-		<ul class="toolbar">
-			<!-- <li class="click" onclick="location.href='<{:U('add')}>'"><span><img src="__PUBLIC__/admin/images/t01.png" /></span>添加</li> -->
-		</ul>
+		<!-- <ul class="toolbar">
+			<li class="click" onclick="location.href='<{:U('add')}>'" style="font-weight:bold;">&nbsp;&nbsp;&nbsp;本日平台活跃量：<{$countnum}></li>
+		</ul> -->
 		<form action="" name="searchForm" method="get">
 		<input type="hidden" name='m' value='<{$moduleName}>' />
 		<input type="hidden" name='a' value="<{$actionName}>" />
