Signed-off-by: hanbing <hanbing@qq.com>

--- a/tp/Admin/Tpl/SubOut/index.html
+++ b/tp/Admin/Tpl/SubOut/index.html
@@ -81,7 +81,7 @@
 			<tr>
 				<td><{$v.username}></td>
 				<td><{$v.nickname}></td>
-				<td><{$v.bank_name}>-<{$v.bank_card}></td>
+				<td><{$v.bank_name}>-<{$v.contact_name}>-<{$v.bank_card}></td>
 				<td><{$v.money}></td>
 				<td class="kfTypeDiv">
 					<span class="kfSpan <{:$v['is_pay']==1 ? 'isKf' : ''}>" data-status='1' data-id='<{$v.id}>'>已支付</span> | 
