--- a/tp/Admin/Tpl/SubUser/cz.html
+++ b/tp/Admin/Tpl/SubUser/cz.html
@@ -52,11 +52,21 @@
 		</form>
 	</div>
 </div>
+<!-- loading动画开始 -->
+<div id="loading" style="position:fixed;z-index:881213;display:none;background-color:#fff;filter:alpha(opacity=70);opacity:0.7;width:100%;height:100px;top:0;"><img src="__PUBLIC__/admin/images/loading.gif" style="display:block;margin:200px 550px;" /></div>
+<script type="text/javascript">
+$(function(){
+	var bodyHeight = document.documentElement.clientHeight;
+	$('#loading').css({height:bodyHeight+'px'});
+})
+</script>
+<!-- loading动画结束 -->
 <script type="text/javascript">
 function save(obj){
 	if(!isNumber($('input[name="info[money]"]').val())){
 		alert_tip("充值金额必须为正整数");return;
 	}
+	$('#loading').show();
 	$('#memberform').submit();
 }
 //验证为正整数
