Signed-off-by: hanbing <hanbing@qq.com>

--- a/tp/Admin/Tpl/Public/left.html
+++ b/tp/Admin/Tpl/Public/left.html
@@ -116,6 +116,9 @@ $(function(){
 				<li><cite></cite>
 					<a href="../home/task/task.php" target="rightFrame">职位列表</a>
 				</li>
+				<li><cite></cite>
+					<a href="<{:U('SubMoneyLog/all')}>" target="rightFrame">金额总览</a>
+				</li>
 			</ul>
 		</dd>
 		<dd>
