--- a/tp/Admin/Tpl/SubTask/index.html
+++ b/tp/Admin/Tpl/SubTask/index.html
@@ -82,6 +82,9 @@
 			<{$list['page']}>
 		</ul>
 	</div>
+	<div style="height:35px;color:red;font-weight:bold;font-size:14px;">
+		总金额-￥<{:I('get.total')}>
+	</div>
 </div>
 <script type="text/javascript">
 function search(){
