Signed-off-by: hanbing <295079454@qq.com>

--- a/tp/Admin/Tpl/SubDaily/add.html
+++ b/tp/Admin/Tpl/SubDaily/add.html
@@ -25,32 +25,33 @@ $(function(){$('.date_picker').date_input();})
 	<div id="usual1" class="usual">
 		<div class="itab">
 			<ul>
-				<li><a href="#tab1" class="selected">bedroom<{:$vo['id'] ? '修改' : '新增'}></a></li>
+				<li><a href="#tab1" class="selected">消息模板<{:$vo['id'] ? '修改' : '新增'}></a></li>
 			</ul>
 		</div>
-		<form method="post" action="<{:U('add')}>" enctype="multipart/form-data" id="memberform">
+		<form method="post" action="<{:U('add')}>" id="memberform">
 		<input type="hidden" name='info[id]' value="<{$vo['id']|default=''}>"/>
-		<input type="hidden" name='info[aid]' value="<{$Think.get.aid}>"/>
 		<input type="hidden" name='lastURL' value="<{$lastURL}>"/>
 		<div id="tab1" class="tabson">
 			<ul class="forminfo">
 				<li>
-					<label>Per<b>*</b></label>
-					<input type="text" name="info[room_fee]" value="<{$vo['room_fee']}>" class="dfinput yaheifont">
-					<span style='display:inline'>yuan</span>
+					<label>开头<b>*</b></label>
+					<input type="text" name="info[title]" value="<{$vo['title']|default='【云客生活部落】'}>" class="dfinput yaheifont">
 				</li>
 				<li>
-					<label>room<b>*</b></label>
-					<input type="text" name="info[room_size]" value="<{$vo['room_size']}>" class="dfinput yaheifont">
+					<label>主题内容<b>*</b></label>
+					<textarea name="info[content]" class="dfinput yaheifont" style="height:150px;"><{$vo['content']}></textarea>
 				</li>
 				<li>
-					<label>bed<b>*</b></label>
-					<input type="text" name="info[bed_size]" value="<{$vo['bed_size']}>" class="dfinput yaheifont">
-					<span style='display:inline'>㎡</span>
+					<label>标题<b>*</b></label>
+					<input type="text" name="info[a_title]" value="<{$vo['a_title']}>" class="dfinput yaheifont" placeholder='记得修改哦～' />
 				</li>
 				<li>
-					<label>起租时间<b>*</b></label>
-					<input type="text" name="info[start_time]" value="<{$vo['start_time']}>" class="dfinput yaheifont date_picker">
+					<label>标题链接<b>*</b></label>
+					<input type="text" name="info[a_link]" value="<{$vo['a_link']}>" class="dfinput yaheifont">
+				</li>
+				<li>
+					<label>计划发送时间<b>*</b></label>
+					<input type="text" name="info[plan_date]" value="<{$vo['plan_date']}>" class="dfinput yaheifont date_picker">
 				</li>
 				<li>
 					<label>&nbsp;</label>
@@ -63,23 +64,7 @@ $(function(){$('.date_picker').date_input();})
 	</div>
 </div>
 <script type="text/javascript">
-function save(obj){
-	if($("input[name='info[room_fee]']").val()==''){
-		alert_tip("rent");
-		return;
-	}
-	if($("input[name='info[room_size]']").val()==''){
-		alert_tip("room");
-		return;
-	}
-	if($("input[name='info[bed_size]']").val()==''){
-		alert_tip("bed");
-		return;
-	}
-	if($("input[name='info[start_time]']").val()==''){
-		alert_tip("availabl");
-		return;
-	}
+function save(){
 	$('#memberform').submit();
 }
 </script>
