Signed-off-by: hanbing <295079454@qq.com>

--- a/tp/Admin/Tpl/Public/left.html
+++ b/tp/Admin/Tpl/Public/left.html
@@ -200,6 +200,16 @@ $(function(){
 			</ul>
 		</dd>
 	</if>
+	<dd>
+		<div class="title">
+			<span><img src="__PUBLIC__/admin/images/leftico03.png" /></span>手机端模拟器
+		</div>
+		<ul class="menuson">
+			<li><cite></cite>
+				<a href="phone.html" target='_blank'>查看手机端</a>
+			</li>
+		</ul>
+	</dd>
     </dl>
 </body>
 </html>
