Signed-off-by: hanbing <295079454@qq.com>

--- a/tp/Admin/Tpl/Public/left.html
+++ b/tp/Admin/Tpl/Public/left.html
@@ -130,6 +130,9 @@ $(function(){
 					<a href="../home/task/task.php" target="rightFrame">职位列表</a>
 				</li>
 				<li><cite></cite>
+					<a href="<{:U('SubTask/daily')}>" target="rightFrame">任务分拨</a>
+				</li>
+				<li><cite></cite>
 					<a href="<{:U('SubMoneyLog/all')}>" target="rightFrame">金额总览</a>
 				</li>
 			</ul>
